# demo-randomgen

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  gunicorn.conf.py  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  setup.py  webserver.py
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  deploy_image.yml  deploy_pages.yml  test_application.yml
docs/: ONBOARDING.md  PLAYBOOK.md  dev-journal.md  requirements.txt  rest_api.md  solution.md  ui-snapshots.md
docs/arc42/: 01-introduction-and-goals.md  02-architecture-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  09-architecture-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md  README.md
docs/assets/drawio/: business_context.drawio
docs/decisions/: 001-src-layout-app-factory-blueprint.md  002-pyproject-ruff-mypy.md  003-per-request-stateless-distribution.md  004-dist-value-probability-pairs.md  005-versioned-api-contract.md  006-two-generators-one-interface.md  007-chi-square-goodness-of-fit.md  008-gunicorn-hardened-docker.md  009-render-free-demo.md  010-arc42-documentation.md  011-inline-end-of-session-checklist.md  012-dedicated-adr-folder.md  013-openapi-docs-endpoint.md  014-adopt-issue-label-standard.md  015-docs-folder-reorganization.md  016-design-first-openapi.md  017-render-image-deploy-hook.md  018-tech-debt-as-issues.md  019-drop-decisions-readme.md  020-cicd-pipeline-srp-sast-branch-protection.md  021-openapi-contract-version.md  022-typed-build-free-frontend.md  022-versioned-api-blueprint-layout.md  023-rename-endpoints-to-service.md  024-env-driven-config.md  025-observability-request-logging.md  026-domain-subpackage-layering.md  026-rate-limiting.md  027-360-review-persistence.md  028-security-response-headers.md  029-supply-chain-controls.md  030-release-record-github-releases-milestones.md  031-adopt-python-3.14.md  README.md  TEMPLATE.md
docs/history/: solution.md
docs/reference/: rest_api.md  ui-snapshots.md
docs/review/: 2026-06-24-360-plan.md  2026-06-24-360-review.md
randomgen/: core.py  endpoints.py  errors.py  histogram.py  hypothesis.py  routing.py
scripts/: api_design.py  capture_ui_snapshots.py  http_post.py  http_post_get.py  requirements.txt
src/randomgen/: __init__.py  app.py  config.py  core.py  endpoints.py  healthcheck.py  histogram.py  hypothesis.py  observability.py  openapi.py  openapi.yaml  routing.py  security.py  service.py  versions.py
src/randomgen/blueprints/: __init__.py  api.py  web.py
src/randomgen/domain/: __init__.py  core.py  errors.py  histogram.py  hypothesis.py  validation.py
src/randomgen/static/css/: style.css
src/randomgen/static/js/: app.js
src/randomgen/templates/: docs.html  index.html
tests/: conftest.py  requirements.txt  test_config.py  test_core.py  test_endpoints.py  test_healthcheck.py  test_histogram.py  test_hypothesis.py  test_observability.py  test_openapi.py  test_routing.py  test_service.py
tests/e2e/: __init__.py  conftest.py  test_container.py  test_ui.py
tests/integration/: __init__.py  test_api_contract.py  test_contract.py  test_rate_limit.py
